# Group-F

./: ErwinS.py  GUI.py  GUI_Simulation.py  Group_Project.ipynb  LICENSE  Potential Function.py  README.md  requirements.txt  robert.txt
Code/: Expression.py  Potential Function.py  Potential_Function.py
KindInput/: KindInput_function.py
Schrodinger/: Diff_func.py  Potential_Function.py
code/: Function.py  Potential_Function.py  V_x-Function.py
package_info/: LICENSE  README.md  pyproject.toml
package_info/src/: example.py
packaging_tutorial/: README.md  pyproject.toml
src/example_package/: example.py
tests/: test_example.py
