[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Solving_Schrodingers_equation_ZJAP014"
version = "0.0.1"
authors = [
  { name="ZJAP014, email=ZJAP014@live.rhul.ac.uk"  },
]
description = "A package that solves Schrodingers Equation with a GUI."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"